SET(SOURCES ui_Presentacion.c
    ui_Screen1.c
    ui_Screen2.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_logo_triple_dependencia_png.c
    ui_img_logo_gba_footer_blanco_png.c
    ui_img_1834955054.c
    ui_img_1727328033.c
    ui_img_902681826.c
    ui_img_519233071.c
    ui_img_464426383.c
    ui_img_1389121707.c)

add_library(ui ${SOURCES})
